# babeledits

./: .env  .gitignore  .gitmodules  README.md  aggregate_translations.py  babelcommand.sh  babelnet_conf.yml  clp_analysis.py  cmd.sh  cmd_seq.sh  compute_transl_costs.py  copy_split_format.py  correct_transl.py  edit.py  edit_and_eval.sh  edit_mzsre.py  env_babeledits.yml  environment_babelnet.yml  eval.sh  exec_eval.py  filter_hard_pages.py  get_edits.py  get_glossary.py  get_hard_subsets.py  get_pages.py  get_prompts_with_alias.py  get_relations.py  get_synsets.py  hard_pipeline.sh  how_to_add_new_langs.md  hp_tuning.py  hparams.md  hparams_seq.md  manage_glossaries.py  merge_datasets.py  multi_hard_edit.sh  multi_hard_pipeline.sh  pipeline.md  pipeline.sh  portability_prompts.py  (+15 more)
EasyEdit/: README.md  requirements.txt
babeledits_pipeline/: auto_filter_relations.py  babelcommand.sh  cmd_seq.sh  get_edits.py  get_stats.py  get_synsets.py  merge_datasets.py  nllb_lang_codes.md  portability_prompts.py  translate.sh  translate_entities.py  translate_utils.py  translate_with_markers.py
configs/: config.yaml  config_mzsre.yaml  hp_tuning.yaml  wandb_sweep.yaml
data_ppl/: ME-PPL_50_translated.json
data_splits/: split_big_dataset.py  split_hard_dataset.py
easy_edit_adaptations/: hparam_dispatch.py  logging.py
figures/: full_dataset_tables.py  hard_subset_tables.py  multi-method-table.py  new_tables.py  seq_tables.py
sample_idxs_clp/: lang_to_indexes_filtered_llama_ft-m.json  lang_to_indexes_llama_ft-m.json
wiki-count/: .gitignore  README.md  cleaner.py  parser.py  (+4 more)
(+107 files in other folders)
